package cn.dpc.provision.domain;

public enum DynamicStatus {
    DRAFT, NOT_BEGIN, IN_PROGRESS, EXPIRED, DISABLED, DELETED;
}
